<resources>
  <string name="app_name">@string/droid_boy</string>
  <string name="droid_boy">DroidBoy</string>
  <string name="feed">News Feed</string>
  <string name="settings">Settings</string>
  <string name="network_control_title">Network Controls</string>
  <string name="session_title">Sessions</string>
  <string name="location_title">Location</string>
  <string name="about_title">About</string>
  <string name="user_dialog_title">Default Attributes</string>
  <string name="user_dialog_okay">OK</string>
  <string name="user_dialog_cancel">Cancel</string>
  <string name="user_dialog_first_name">First Name</string>
  <string name="user_dialog_last_name">Last Name</string>
  <string name="user_dialog_email_address">Email Address</string>
  <string name="user_dialog_gender">Gender:</string>
  <string name="user_dialog_avatar_image_url">Avatar Image URL</string>
  <string name="user_dialog_flush">Flush on close</string>
  <string name="user_dialog_populate">Populate</string>
  <string name="user_dialog_clear">Clear All</string>
  <string name="user_dialog_birthday_button">Pick Birthday</string>
  <string name="user_dialog_done">done</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="unspecified">Unspecified</string>
  <string name="subscribed">Subscribed</string>
  <string name="opted_in">Opted-In</string>
  <string name="unsubscribed">Unsubscribed</string>
  <string name="facebook_share_title">Facebook</string>
  <string name="facebook_share_summary">Share us on Facebook</string>
  <string name="facebook_share_toast">Thank you for sharing on Facebook</string>
  <string name="twitter_share_title">Twitter</string>
  <string name="twitter_share_summary">Share us on Twitter</string>
  <string name="twitter_share_toast">Thank you for sharing on Twitter</string>
  <string name="custom_logging_dialog_title">Custom Logging</string>
  <string name="custom_logging_dialog_summary">Log User Attributes, Custom Events, and Purchases</string>
  <string name="custom_logging_dialog_okay">OK</string>
  <string name="custom_logging_dialog_cancel">Cancel</string>
  <string name="custom_logging_category_title">Custom Logging</string>
  <string name="log_user_attributes_title">Custom Attributes</string>
  <string name="log_events_title">Custom Events</string>
  <string name="log_purchase_title">Purchases</string>
  <string name="storage_info_preference_category">Storage Info</string>
  <string name="file_data_title">File Data</string>
  <string name="file_data_summary">View the files stored for this app.</string>
  <string name="shared_preferences_title">SharedPreferences Data</string>
  <string name="shared_preferences_summary">View the SharedPreferences data for this app.</string>
  <string name="attribute_array">Array Operation:</string>
  <string name="attribute_array_set">Set</string>
  <string name="attribute_array_add">Add</string>
  <string name="attribute_array_remove">Remove</string>
  <string name="attribute_array_key">Create Attribute Array</string>
  <string name="custom_logging_user_attribute">User Attribute</string>
  <string name="custom_logging_user_attribute_increment">Increment Attribute</string>
  <string name="custom_logging_user_attribute_unset">Unset Attribute</string>
  <string name="custom_logging_custom_purchase_qty">Purchase Quantity</string>
  <string name="custom_logging_custom_purchase_currency_code">Currency Code</string>
  <string name="custom_logging_custom_purchase_price_code">Price</string>
  <string name="data_flush_title">Request Flush</string>
  <string name="data_flush_toast">Data flush requested</string>
  <string name="requested_inappmessage_toast">Requested In-App Message</string>
  <string name="open_session_toast">Opened new Appboy session.</string>
  <string name="resume_session_toast">Resumed existing Appboy session.</string>
  <string name="close_session_toast">Closed existing Appboy session.</string>
  <string name="no_session_toast">No Appboy session to close.</string>
  <string name="enabled_outbound_network_requests_toast">Enabled Appboy outbound network requests</string>
  <string name="disabled_outbound_network_requests_toast">Disabled Appboy outbound network requests</string>
  <string name="spinner_content_description">Spinner</string>
  <string name="spin">Spin!</string>
  <string name="red">Red</string>
  <string name="blue">Blue</string>
  <string name="yellow">Yellow</string>
  <string name="green">Green</string>
  <string name="create_and_add_inappmessage">Create and Add In-App Message</string>
  <string name="display_next_inappmessage">Display Next In-App Message</string>
  <string name="request_inappmessage_from_appboy">Request In-App Message from Appboy</string>
  <string name="hide_current_inappmessage">Hide Current In-App Message</string>
  <string name="custom_iappboy_navigator">Custom IAppboyNavigator</string>
  <string name="custom_iappboy_animation">Custom IInAppMessageAnimationFactory</string>
  <string name="custom_iinappmessagemanager_listener">Custom IInAppMessageManagerListener</string>
  <string name="custom_html_inappmessage_action_listener">Custom IHtmlInAppMessageActionListener</string>
  <string name="custom_inappmessage_modal_size">Custom Max Graphic Modal Size</string>
  <string name="custom_inappmessage_image_radius">Custom Image Radius (remove radius)</string>
  <string name="inappmessage_activity">In-App Messages</string>
  <string name="custom_iinappmessage_view_factory">Custom IInAppMessageViewFactory</string>
  <string name="push_testing">Push</string>
  <string name="set_header_align">Set header align</string>
  <string name="set_message_align">Set message align</string>
  <string name="set_background_color">Set background color</string>
  <string name="set_icon_color">Set icon color</string>
  <string name="set_icon_background_color">Set icon background color</string>
  <string name="set_close_button_color">Set close button color</string>
  <string name="set_text_color">Set text color</string>
  <string name="set_header_text_color">Set header text color</string>
  <string name="set_button_color">Set button color</string>
  <string name="set_button_text_color">Set button text color</string>
  <string name="set_animate_in">Set animate in</string>
  <string name="set_animate_out">Set animate out</string>
  <string name="header_10">Hey there#</string>
  <string name="header_20">Hey hey from Appboy#</string>
  <string name="header_30">Good morning from us @ Appboy#</string>
  <string name="header_80">Hello from Appboy! Have a fun day okay. Hello from Appboy! Have a fun day today#</string>
  <string name="message_20">Hey hey from Appboy#</string>
  <string name="message_40">Hello there!  This is an in-app message#</string>
  <string name="message_70">Hello there! This is an in-app message. Yo, this is an in-app message#</string>
  <string name="message_90">Hello there! This is an in-app message.  Hello again!  Anyways, this is an in-app message#</string>
  <string name="message_140">Welcome to Appboy! Appboy is Marketing Automation for Apps. This is an in-app message - this message is exactly one hundred and forty chars#</string>
  <string name="message_240">Welcome to Appboy! Appboy is Marketing Automation for Apps. This is an in-app message - this message is exactly two hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens#</string>
  <string name="message_640">Welcome to Appboy! Appboy is Marketing Automation for Apps. This is an in-app message - this message is exactly six hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens.  This is an in-app message - this message is exactly six hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens.  This is an in-app message - this message is exactly six hundred and forty chars!  We don\'t recommend making in-app messages longer than 140 characters due to variations in screens.  This is a waaaay too long message#</string>
  <string name="test_push">Send Push</string>
  <string name="push_test_large_icon_label">Use Dynamic Large Icon</string>
  <string name="push_tester_big_title_label">Add Big Title</string>
  <string name="push_tester_big_summary_label">Add Big Summary</string>
  <string name="push_tester_summary_label">Add Summary Text</string>
  <string name="push_tester_overflow_text_label">Overflow Text</string>
  <string name="push_tester_public_version_label">Set Public Version Notification</string>
  <string name="push_tester_wear_hide_app_icon_label">Wear: Hide App Icon</string>
  <string name="push_tester_wear_add_extra_pages">Wear: Add Extra Pages</string>
  <string name="push_tester_test_triggers">Force request triggers on click</string>
  <string name="disable_appboy_network_requests">Toggle Disable Appboy Network Requests</string>
  <string name="disable_appboy_network_requests_summary">Disable Appboy network requests for selected emulators starting next app run</string>
  <string name="push_preference_category">Push</string>
  <string name="misc_preference_category">Misc</string>
  <string name="disable_appboy_logging_title">Toggle Appboy Logging</string>
  <string name="disable_appboy_logging_summary">Toggle Appboy Logging.  This does not persist through app runs.</string>
  <string name="get_registration_id_title">Get Push Registration Id</string>
  <string name="set_email_subscription_state_title">Set Email Subscription State</string>
  <string name="set_push_subscription_state_title">Set Push Subscription State</string>
  <string name="sort_feed">Sort News Feed</string>
  <string name="custom_news_feed_card_click_action_listener">Custom INewsFeedClickActionListener</string>
  <string name="get_registration_id_summary">Retrieve the Registration Id used for push on this device.</string>
  <string name="set_push_subscription_state_summary">Subscribe, opt-in, or opt-out for push.</string>
  <string name="set_email_subscription_state_summary">Subscribe, opt-in, or opt-out for email.</string>
  <string name="log_attribution_title">Log Attribution For User</string>
  <string name="log_attribution_summary">Log Creative, AdGroup, Network, and Campaign.</string>
  <string name="sort_feed_summary">Sort the News Feed Cards to Prefer to Display Unread Cards</string>
  <string name="custom_news_feed_card_click_action_listener_summary">toggles the use of CustomNewsFeedClickActionListener</string>
  <string name="appboy_image_url">https://blog.appboy.com/wp-content/uploads/2014/11/Install_Attribution_Cover.png</string>
  <string name="appboy_image_url_1600w_1000h">https://appboy-images.com/appboy/communication/assets/image_assets/images/57c761151b0e4d207934d109/original.?1472684309</string>
  <string name="appboy_image_url_1000w_1000h">https://appboy-images.com/appboy/communication/assets/image_assets/images/57c760fb1b0e4d414534d0e8/original.?1472684283</string>
  <string name="appboy_image_url_1000w_800h">https://appboy-images.com/appboy/communication/assets/image_assets/images/57c760ef56ec310d03f55668/original.?1472684271</string>
  <string name="appboy_image_url_1000w_1600h">https://appboy-images.com/appboy/communication/assets/image_assets/images/57c761025c5a686cbd72479f/original.?1472684290</string>
  <string name="appboy_image_url_1600w_500h">https://appboy-images.com/appboy/communication/assets/image_assets/images/57c7610e56ec313c63f556cd/original.?1472684302</string>
  <string name="appboy_image_url_1160w_400h">https://appboy-images.com/appboy/communication/assets/image_assets/images/57c7610856ec31384ef556bf/original.?1472684296</string>
</resources>