<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/com_appboy_push_tester_root"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
      android:id="@+id/push_testing_buttons"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      style="@style/Appboy.Feedback.NavigationBar">
    <Button
        android:id="@+id/test_push_button"
        android:layout_width="0.0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/test_push"
        android:textSize="12dp"
        android:textStyle="bold"/>
  </LinearLayout>
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:fillViewport="true"
      android:layout_above="@id/push_testing_buttons">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <CheckBox
          android:id="@+id/push_tester_big_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_big_title_label"
          android:textColor="@android:color/black"/>
        <CheckBox
          android:id="@+id/push_tester_big_summary"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_big_summary_label"
          android:textColor="@android:color/black"/>
        <CheckBox
          android:id="@+id/push_tester_summary"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_summary_label"
          android:textColor="@android:color/black"/>
        <CheckBox
          android:id="@+id/push_tester_overflow_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_overflow_text_label"
          android:textColor="@android:color/black"/>
        <CheckBox
          android:id="@+id/push_tester_set_public_version"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_public_version_label"
          android:textColor="@android:color/black"/>
        <CheckBox
          android:id="@+id/push_tester_wear_hide_app_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_wear_hide_app_icon_label"
          android:textColor="@android:color/black"/>
        <CheckBox
          android:id="@+id/push_tester_wear_add_extra_pages"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/push_tester_wear_add_extra_pages"
          android:textColor="@android:color/black"/>
        <CheckBox
            android:id="@+id/push_tester_test_triggers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_tester_test_triggers"
            android:textColor="@android:color/black"/>
        <Spinner
          android:id="@+id/push_image_spinner"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/push_wear_background_image_spinner"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/push_priority_spinner"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/push_click_action_spinner"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/push_category_spinner"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/push_visibility_spinner"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/push_action_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
  </ScrollView>
</RelativeLayout>