<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/quadrisect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="100"
            android:layout_weight="50">

            <RelativeLayout
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:layout_weight="50">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/DecisionOptionText"
                    android:text="@string/red"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:background="@color/yellow"
                android:layout_weight="50">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/DecisionOptionText"
                    android:text="@string/yellow"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="100"
            android:layout_weight="50">

            <RelativeLayout
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:background="@color/green"
                android:layout_weight="50">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/DecisionOptionText"
                    android:text="@string/green"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:background="@color/blue"
                android:layout_weight="50">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/DecisionOptionText"
                    android:text="@string/blue"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      android:visibility="gone">

      <Button
          android:id="@+id/settings"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/settings"/>

      <Button
          android:id="@+id/feed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/feed"/>

      <Button
          android:id="@+id/feedback"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/send_feedback"/>
  </LinearLayout>

  <ImageView
      android:id="@+id/spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:src="@drawable/spinner"
      android:contentDescription="@string/spinner_content_description"/>

  <Button
      android:id="@+id/spin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      style="@style/DecisionSpinButton"/>
</RelativeLayout>
