<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quardisect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0.0dp"
      android:orientation="horizontal"
      android:baselineAligned="false"
      android:weightSum="100"
      android:layout_weight="50">

    <RelativeLayout
        android:layout_width="0.0dp"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:layout_weight="50">

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          style="@style/DecisionOptionText"
          android:text="@string/red"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0.0dp"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:layout_weight="50">

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          style="@style/DecisionOptionText"
          android:text="@string/yellow"/>
    </RelativeLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0.0dp"
      android:orientation="horizontal"
      android:baselineAligned="false"
      android:weightSum="100"
      android:layout_weight="50">

    <RelativeLayout
        android:layout_width="0.0dp"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:layout_weight="50">

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          style="@style/DecisionOptionText"
          android:text="@string/green"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0.0dp"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:layout_weight="50">

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          style="@style/DecisionOptionText"
          android:text="@string/blue"/>
    </RelativeLayout>
  </LinearLayout>
</LinearLayout>